# minitorrent

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust_ci.yml
bencode/: Cargo.toml
bencode/src/: deserialize.rs  lib.rs
core-logic/: Cargo.toml
core-logic/src/: fs.rs  lib.rs  metainfo.rs  wifi.rs
core-logic/src/bittorrenter/: error.rs  mod.rs  states.rs
core-logic/src/core/: metainfo.rs  mod.rs  net.rs  tracker.rs
core-logic/src/fs/: mod.rs  operations.rs  torrent_retrieval.rs  volume_mgr.rs
core-logic/src/hash/: mod.rs
core-logic/src/net/: buffer.rs  downloader.rs  mod.rs  seeder.rs  tcp.rs  tracker_requester.rs  tracker_requesting.rs  url.rs
core-logic/src/peer/: buf_reader.rs  downloader_processer.rs  event_loop.rs  handshake.rs  mod.rs  piece_state.rs  process.rs
core-logic/src/peer/messages/: error.rs  incoming.rs  mod.rs
core-logic/tests/: fs.rs  integration_test.rs
core-logic/tests/bittorrenter_helper/: mod.rs
core-logic/tests/fs_duples/: blockdevice.rs  mod.rs  volume_mgr.rs
core-logic/tests/fs_helper/: blockdevice.rs  mod.rs  volume_mgr.rs
core-logic/tests/wifi_helper/: mod.rs
esp-app/: Cargo.toml
esp-app/src/: lib.rs  setup.rs
esp-app/src/fs/: mod.rs  sd_card.rs  volume_mgr.rs
esp-app/src/fs/sd_card/: mod.rs
esp-app/src/torrent_retrieval/: mod.rs
esp-app/src/wifi/: dns.rs  error.rs  mod.rs  network.rs  setup.rs  socket.rs
src/fs/: mod.rs  sd_card.rs
