[package]
name = "core-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
bencode = { path = "../bencode" }
defmt = "1.0.1"
sha1_smol = "1.0.1"
embedded-sdmmc = { version = "0.9.0", default-features = false, features = [
    "defmt-log",
] }
heapless = { version = "0.9.2", features = ["defmt"] }
embedded-nal-async = "0.9.0"
embedded-io-async = { version = "0.7.0", features = ["defmt"] }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
fatfs = "0.3.6"
mbrman = "0.6.1"
hex = "0.4.3"
reqwest = "0.13.1"
embedded-io = "0.7.1"
