[package]
name = "core-logic"
version = "0.1.0"
edition = "2024"

[dependencies]
bencode = { path = "../bencode" }
defmt = { version = "1.0.1", optional = true }
sha1_smol = "1.0.1"
embedded-sdmmc = { version = "0.9.0", default-features = false }
heapless = { version = "0.9.2" }
embedded-nal-async = "0.9.0"
embedded-io-async = { version = "0.7.0" }

[dev-dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
fatfs = "0.3.6"
mbrman = "0.6.1"
hex = "0.4.3"
reqwest = "0.13.1"
embedded-io = "0.7.1"
defmt-logger = { version = "0.1.0", features = ["unstable"] }

[features]
defmt = ["embedded-io-async/defmt", "heapless/defmt", "embedded-sdmmc/defmt-log", "dep:defmt"]